Remove link href to avoid address bar show on iOS

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -12,4 +12,5 @@
     background-color: black;
     color: white;
     padding: 0.2rem;
+    cursor: pointer;
 }
